--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -592,6 +592,7 @@
       @title="Bestand selecteren"
       @helpTextDragDrop="Bestand wordt meteen toegevoegd aan bibliotheek na selectie"
       @bpmnForbidden="true"
+      @multiple="true"
       @updateProcess={{this.addFileToProcess}}
       @onFinishUpload={{this.fileUploaded}}
     />
