--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -216,7 +216,11 @@
             Klik en hou vast om diagram te bedienen. Gebruik ctrl en scrollwiel
             om in en uit te zoomen. Klik elders om bediening uit te schakelen.
           </AuHelpText>
-          <BpmnViewer @bpmnFile={{this.latestBpmnFile}} />
+          <BpmnViewer
+            @bpmnFile={{this.latestBpmnFile}}
+            @onBpmnLoaded={{this.setLatestBpmnFileAsBpmn}}
+            @onSvgLoaded={{this.setLatestBpmnFileAsSvg}}
+          />
           <DataCard class="au-u-margin-top-small">
             <:header></:header>
             <:title>
@@ -388,7 +392,7 @@
                     @skin="link"
                     @width="block"
                     @hideText="true"
-                    {{on "click" (fn this.downloadOriginalFile bpmnFile)}}
+                    {{on "click" (fn this.downloadFile bpmnFile)}}
                   >Download</AuButton>
                 </td>
                 {{#if this.canEdit}}
@@ -495,7 +499,7 @@
                     @skin="link"
                     @width="block"
                     @hideText="true"
-                    {{on "click" (fn this.downloadOriginalFile attachment)}}
+                    {{on "click" (fn this.downloadFile attachment)}}
                   >Download</AuButton>
                 </td>
                 {{#if this.canEdit}}
@@ -556,22 +560,34 @@
       <p>Het geselecteerde BPMN-bestand is beschikbaar in verschillende
         formaten:</p>
       <AuButtonGroup class="au-u-flex au-u-flex--around">
-        {{#each this.downloadTypes as |downloadType|}}
-          <AuButton
-            @skin={{if
-              (eq downloadType.extension "bpmn")
-              "primary"
-              "secondary"
-            }}
-            {{on
-              "click"
-              (fn this.downloadLatestBpmnFile downloadType.extension)
-            }}
-          >{{capitalize downloadType.label}}
-            <span
-              class="au-u-para-tiny au-u-regular"
-            >(.{{downloadType.extension}})</span></AuButton>
-        {{/each}}
+        <AuButton
+          @skin="primary"
+          {{on "click" (perform this.downloadLatestBpmnFile "bpmn")}}
+        >
+          Origineel
+          <span class="au-u-para-tiny au-u-regular">(.bpmn)</span>
+        </AuButton>
+        <AuButton
+          @skin="secondary"
+          {{on "click" (perform this.downloadLatestBpmnFile "png")}}
+        >
+          Afbeelding
+          <span class="au-u-para-tiny au-u-regular">(.png)</span>
+        </AuButton>
+        <AuButton
+          @skin="secondary"
+          {{on "click" (perform this.downloadLatestBpmnFile "svg")}}
+        >
+          Vectorafbeelding
+          <span class="au-u-para-tiny au-u-regular">(.svg)</span>
+        </AuButton>
+        <AuButton
+          @skin="secondary"
+          {{on "click" (perform this.downloadLatestBpmnFile "pdf")}}
+        >
+          PDF
+          <span class="au-u-para-tiny au-u-regular">(.pdf)</span>
+        </AuButton>
       </AuButtonGroup>
     </div>
   </:body>
