Upload and download multiple attachments at once (#48)
* Remove requests to backend for bpmn file conversion

* Convert bpmn to svg locally

* Refactor

* Add functionality to convert svg to png and pdf

* Make download function a task

* Don't use depracated functions

* Reset controller booleans after exit

* Allow multiple attachments to be downloaded

* Add button for downloading all attachments

* Add button for download all attachments (ctd)

* Download file regularly in case attachments holds single file

* Merge branch 'feature/convert-bpmn-files' into feature/upload-download-multiple-files

* Remove unnecesary parameter

* Add functionality to zip

* Make zipping action a drop task

* Merge branch 'development' into feature/upload-download-multiple-files

* Update import statements

* Give zipfile file name

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -424,10 +424,16 @@
           <AuHeading @level="2" @skin="3">Bijlagen</AuHeading>
           <AuButtonGroup>
             {{#if this.canEdit}}
-              <AuButton {{on "click" this.openAddModal}}>
+              <AuButton @skin="secondary" {{on "click" this.openAddModal}}>
                 Voeg toe
               </AuButton>
             {{/if}}
+            <AuButton
+              @disabled={{not this.attachments}}
+              {{on "click" (perform this.downloadAttachemnts)}}
+            >
+              Download alles
+            </AuButton>
           </AuButtonGroup>
         </div>
         <AuHelpText @skin="secondary" class="au-u-margin-top-none">
@@ -608,6 +614,7 @@
       @title="Bestand selecteren"
       @helpTextDragDrop="Bestand wordt meteen toegevoegd aan bibliotheek na selectie"
       @bpmnForbidden="true"
+      @multiple="true"
       @updateProcess={{this.addFileToProcess}}
       @onFinishUpload={{this.fileUploaded}}
     />
