--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -280,7 +280,7 @@
         <div class="au-c-boxed-table">
           <AuDataTable
             @content={{this.processSteps}}
-            @isLoading={{this.processStepsBatchIsLoading}}
+            @isLoading={{this.processStepsAreLoading}}
             @page={{this.pageProcessSteps}}
             @size={{this.sizeProcessSteps}}
             as |t|
@@ -298,9 +298,9 @@
                   @label="Type"
                 />
               </c.header>
-              {{#if this.processStepsBatchHasErrored}}
+              {{#if this.processStepsHaveErrored}}
                 <TableMessage::Error />
-              {{else if this.processStepsBatchHasNoResults}}
+              {{else if this.processStepsHaveNoResults}}
                 <TableMessage>
                   <p>
                     Er werden geen zoekresultaten gevonden.
