Fetch latest bpmn file after replacement

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -430,7 +430,7 @@
             {{/if}}
             <AuButton
               @disabled={{not this.attachments}}
-              {{on "click" (perform this.downloadAttachemnts)}}
+              {{on "click" (perform this.downloadAttachments)}}
             >
               Download alles
             </AuButton>
