--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -280,7 +280,7 @@
         <div class="au-c-boxed-table">
           <AuDataTable
             @content={{this.processSteps}}
-            @isLoading={{this.processStepsBatchIsLoading}}
+            @isLoading={{this.processStepsAreLoading}}
             @page={{this.pageProcessSteps}}
             @size={{this.sizeProcessSteps}}
             as |t|
@@ -298,9 +298,9 @@
                   @label="Type"
                 />
               </c.header>
-              {{#if this.processStepsBatchHasErrored}}
+              {{#if this.processStepsHaveErrored}}
                 <TableMessage::Error />
-              {{else if this.processStepsBatchHasNoResults}}
+              {{else if this.processStepsHaveNoResults}}
                 <TableMessage>
                   <p>
                     Er werden geen zoekresultaten gevonden.
@@ -430,7 +430,7 @@
             {{/if}}
             <AuButton
               @disabled={{not this.attachments}}
-              {{on "click" (perform this.downloadAttachemnts)}}
+              {{on "click" (perform this.downloadAttachments)}}
             >
               Download alles
             </AuButton>
@@ -543,7 +543,7 @@
       @helpTextDragDrop="Bestand wordt meteen verwerkt en toegevoegd aan bibliotheek na selectie"
       @updateProcess={{this.addFileToProcess}}
       @extractBpmnElements={{this.extractBpmnElements}}
-      @onFinishUpload={{this.fileUploaded}}
+      @onFinishUpload={{this.bpmnFileUploaded}}
     />
   </:body>
   <:footer>
@@ -616,7 +616,7 @@
       @bpmnForbidden="true"
       @multiple="true"
       @updateProcess={{this.addFileToProcess}}
-      @onFinishUpload={{this.fileUploaded}}
+      @onFinishUpload={{this.attachmentsUploaded}}
     />
   </:body>
   <:footer>
