Provide more context when musearch query fails

--- a/app/templates/process-steps/index.hbs
+++ b/app/templates/process-steps/index.hbs
@@ -83,7 +83,7 @@
           />
         </c.header>
         {{#if this.hasErrored}}
-          <TableMessage::Error />
+          <TableMessage::ErrorProcessSteps />
         {{else if this.hasNoResults}}
           <TableMessage>
             <p>
