Reintroduce links to help page

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -87,13 +87,13 @@
               </div>
             {{/if}}
           </div>
-          {{! 
-          TODO: Reintroduce when help page gets content
-          }}
-          {{! <p class="au-u-text-center">
-            <AuLink @route="help">Meer informatie over processen en BPMN
-              bestanden</AuLink>
-          </p> }}
+          <p class="au-u-text-center">
+            <AuLinkExternal
+              href="https://abb-vlaanderen.gitbook.io/informatie-oph"
+            >
+              Meer informatie over processen en BPMN-bestanden
+            </AuLinkExternal>
+          </p>
         </div>
       </div>
     </section>
