--- a/app/templates/processes/index.hbs
+++ b/app/templates/processes/index.hbs
@@ -33,11 +33,9 @@
     <PageHeader>
       <:title>Processen</:title>
       <:subtitle>
-        {{! 
-          TODO: Reintroduce when help page gets content
-          }}
-        {{! <AuLink @route="help" @skin="secondary" @icon="circle-info">Over BPMN
-          bestanden</AuLink> }}
+        <AuLinkExternal href="https://abb-vlaanderen.gitbook.io/informatie-oph">
+          Over BPMN-bestanden
+        </AuLinkExternal>
       </:subtitle>
       <:action></:action>
     </PageHeader>
