--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -91,7 +91,7 @@
             <AuLinkExternal
               href="https://abb-vlaanderen.gitbook.io/informatie-oph"
             >
-              Meer informatie over processen en BPMN-bestanden
+              Handleiding Open Proces Huis
             </AuLinkExternal>
           </p>
         </div>
