--- a/app/templates/process-steps/index.hbs
+++ b/app/templates/process-steps/index.hbs
@@ -44,7 +44,7 @@
       <:title>Processtappen</:title>
       <:subtitle>
         <AuLinkExternal href="https://abb-vlaanderen.gitbook.io/informatie-oph">
-          Over BPMN-bestanden
+          Handleiding Open Proces Huis
         </AuLinkExternal>
       </:subtitle>
       <:action></:action>
