--- a/app/templates/processes/index.hbs
+++ b/app/templates/processes/index.hbs
@@ -34,7 +34,7 @@
       <:title>Processen</:title>
       <:subtitle>
         <AuLinkExternal href="https://abb-vlaanderen.gitbook.io/informatie-oph">
-          Over BPMN-bestanden
+          Handleiding Open Proces Huis
         </AuLinkExternal>
       </:subtitle>
       <:action></:action>
