--- a/app/templates/shared-processes/index.hbs
+++ b/app/templates/shared-processes/index.hbs
@@ -35,7 +35,7 @@
       <:title>Gedeelde processen</:title>
       <:subtitle>
         <AuLinkExternal href="https://abb-vlaanderen.gitbook.io/informatie-oph">
-          Over BPMN-bestanden
+          Handleiding Open Proces Huis
         </AuLinkExternal>
       </:subtitle>
       <:action>
