--- a/app/components/app-header.hbs
+++ b/app/components/app-header.hbs
@@ -3,30 +3,22 @@
   @homeRoute="index"
   @appTitle={{config "appName"}}
 >
-  {{#if this.currentSession.isAdmin}}
-    <li class="au-c-list-horizontal__item">
-      <ImpersonationMenu />
-    </li>
+  {{#if this.session.isAuthenticated}}
+    <AuDropdown
+      @title={{this.currentSession.title}}
+      @buttonLabel="Account settings"
+      @alignment="right"
+      role="menu"
+    >
+
+      <AuLink @route="auth.switch" @icon="switch" role="menuitem">
+        Wissel van bestuurseenheid
+      </AuLink>
+      <AuLink @route="auth.logout" @icon="logout" role="menuitem">
+        Afmelden
+      </AuLink>
+    </AuDropdown>
+  {{else}}
+    <LoginButton @isCompact={{true}} />
   {{/if}}
-
-  <li class="au-c-list-horizontal__item">
-    {{#if this.session.isAuthenticated}}
-      <AuDropdown
-        @title={{this.userInfo}}
-        @buttonLabel="Account settings"
-        @alignment="right"
-        role="menu"
-      >
-
-        <AuLink @route="auth.switch" @icon="switch" role="menuitem">
-          Wissel van bestuurseenheid
-        </AuLink>
-        <AuLink @route="auth.logout" @icon="logout" role="menuitem">
-          Afmelden
-        </AuLink>
-      </AuDropdown>
-    {{else}}
-      <LoginButton @isCompact={{true}} />
-    {{/if}}
-  </li>
 </AuMainHeader>
