Rename bpmn files to diagram

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -25,8 +25,8 @@
               {{!template-lint-disable require-valid-alt-text}}
             />
           </div>
-          <p>Raadpleeg, doorzoek en upload processen als originele
-            BPMN-bestanden naar het Open Proces Huis, de centrale bron voor
+          <p>Raadpleeg, doorzoek en upload processen als originele BPMN- of
+            Visiobestanden naar het Open Proces Huis, de centrale bron voor
             lokale besturen in Vlaanderen om processen te ontdekken en te delen.</p>
         </AuContent>
         <div class="au-c-home__form au-o-flow">
