--- a/app/templates/reporting.hbs
+++ b/app/templates/reporting.hbs
@@ -2,8 +2,7 @@
   <:title>Rapportering</:title>
   <:subtitle>
     <p>Deze pagina bundelt alle rapporten met betrekking tot besturen en
-      processen. De OPH Team Space op GitBook vertelt dan weer alles omtrent het
-      raadplegen van gebruiksgegevens.
+      processen.
     </p>
     <AuLinkExternal
       href="https://app.gitbook.com/o/-MP9Yduzf5xu7wIebqPG/s/XKRwfgAcZ0dhzZWkI6YJ/research/analytics"
@@ -13,3 +12,46 @@
   </:subtitle>
   <:action></:action>
 </PageHeader>
+
+<AuDataTable
+  @content={{this.reports}}
+  @isLoading={{this.isLoading}}
+  @page={{this.page}}
+  @size={{this.size}}
+  as |t|
+>
+  <t.content class="au-c-data-table__table--small" as |c|>
+    <c.header>
+      <AuDataTableThSortable
+        @field="title"
+        @currentSorting={{this.sort}}
+        @label="Titel"
+      />
+      <AuDataTableThSortable
+        @field="description"
+        @currentSorting={{this.sort}}
+        @label="Beschrijving"
+      />
+      <AuDataTableThSortable
+        @field="created"
+        @currentSorting={{this.sort}}
+        @label="Aangemaakt op"
+      />
+    </c.header>
+    {{#if this.hasErrored}}
+      <TableMessage::Error />
+    {{else if this.hasNoResults}}
+      <TableMessage>
+        <p>
+          Er werden geen zoekresultaten gevonden.
+        </p>
+      </TableMessage>
+    {{else}}
+      <c.body as |report|>
+        <td>{{report.title}}</td>
+        <td>{{report.description}}</td>
+        <td>{{date-format report.created true}}</td>
+      </c.body>
+    {{/if}}
+  </t.content>
+</AuDataTable>
