--- a/app/templates/reporting.hbs
+++ b/app/templates/reporting.hbs
@@ -35,8 +35,9 @@
       <AuDataTableThSortable
         @field="created"
         @currentSorting={{this.sort}}
-        @label="Aangemaakt op"
+        @label="Bijgewerkt op"
       />
+      <th></th>
     </c.header>
     {{#if this.hasErrored}}
       <TableMessage::Error />
@@ -51,6 +52,13 @@
         <td>{{report.title}}</td>
         <td>{{report.description}}</td>
         <td>{{date-format report.created true}}</td>
+        <AuButton
+          @icon="download"
+          @skin="link"
+          @width="block"
+          @hideText="true"
+          {{on "click" (fn this.downloadReport report)}}
+        >Download</AuButton>
       </c.body>
     {{/if}}
   </t.content>
