--- a/app/templates/shared-processes/index.hbs
+++ b/app/templates/shared-processes/index.hbs
@@ -7,7 +7,7 @@
           class="au-o-box au-o-box--small au-o-flow au-o-flow--small"
         >
           <div>
-            <AuLabel for="filter-title">Filter op titel of beschrijving</AuLabel>
+            <AuLabel for="filter-title">Titel of beschrijving</AuLabel>
             <ProcessSelectByTitle
               @id="filter-title"
               @selected={{this.title}}
