--- a/app/templates/processes/index.hbs
+++ b/app/templates/processes/index.hbs
@@ -7,11 +7,20 @@
           class="au-o-box au-o-box--small au-o-flow au-o-flow--small"
         >
           <div>
-            <AuLabel for="filter-title">Zoek op titel of beschrijving</AuLabel>
+            <AuLabel for="filter-title">Titel of beschrijving</AuLabel>
             <ProcessSelectByTitle
               @id="filter-title"
               @selected={{this.title}}
               @onChange={{this.setTitle}}
+              class="grow"
+            />
+          </div>
+          <div>
+            <AuLabel for="filter-classification">Type bestuur</AuLabel>
+            <ProcessSelectByClassification
+              @id="filter-classification"
+              @selected={{this.classification}}
+              @onChange={{this.setClassification}}
               class="grow"
             />
           </div>
@@ -65,6 +74,11 @@
             @label="Laatst aangepast op"
           />
           <AuDataTableThSortable
+            @field="classification"
+            @currentSorting={{this.sort}}
+            @label="Type bestuur"
+          />
+          <AuDataTableThSortable
             @field="organization"
             @currentSorting={{this.sort}}
             @label="Bestuur"
@@ -91,6 +105,7 @@
             </td>
             <td>{{or (truncate process.description 150 true) "/"}}</td>
             <td>{{date-format process.modified}}</td>
+            <td>{{process.publisher.classification.label}}</td>
             <td>{{process.publisher.name}}</td>
           </c.body>
         {{/if}}
